<resources>
    <string name="app_name">MyNewsApp</string>
    <string name="articleTitle">Article Title</string>
    <string name="article_summary">Article Summary Here</string>
    <string name="article_section">Article Setcion</string>
    <string name="article_date">1/1/2018:16:20 Am</string>
    <string name="article_author">Write Be :</string>
    <string name="article_image">Pull image From URL</string>
    <string name="hash_tag"> #</string>
    <string name="empty_msg">No new News.</string>
    <string name="check_network_connection">Can\'t load new data, Please check network connection.</string>
    <!-- Setting Name .-->
	<string name="settings_menu">Settings</string>
    <!-- SubTitle Message -->
    <string name="user_preferences">User Preferences</string>
    <!--Page Size -->
	<string name="news_page_size_label">Page Size</string>
    <string name="news_page_size_key" translatable="false">page-size</string>
    <string name="news_page_size_default" translatable="false">2</string>

    <!--FragmentManager Tag -->
    <string name="setting_fragment_tag">SettingsFragment</string>
    
    <!-- List Preferences Title -->
    <string name="news_order_by_title">Order By</string>

    <!--All items in Order-by labels -->
    <string name="news_order_by_key" translatable="false">order-by</string>
    <string name="news_order_by_default" translatable="false">newest</string>
    <string name="news_order_by_newest_label">Newest</string>
    <string name="news_order_by_oldest_label">Oldest</string>
    <string name="news_order_by_relevance_label">Relevance</string>
    <!-- All items in order-by Values  -->
    <string name="news_order_by_newest_value">newest</string>
    <string name="news_order_by_oldest_value">oldest</string>
    <string name="news_order_by_relevance_value">relevance</string>

    <!-- set Date From date-->
    <string name="news_use_date_key">date</string>
    <string name="news_use_date_label">Set Date</string>
    <string name="news_use_from_date_key">from-date</string>
    <string name="news_use_to_date_key">to-date</string>
	<!-- Day / Month / Year-->
    <string name="news_use_date_default">1\-1\-1017</string>
    <string name="specific_msg">Set Specific Date</string>
    <string name="btn_from_text">from-date</string>
    <string name="hint_from_date">From Date</string>
    <string name="btn_to_date_text">to-date</string>
    <string name="hint_to_date">to date</string>
	<string name="empty_msg_check_date">Please Enter Correct Date</string>


</resources>
