<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="abdulrahmanjavanrd.com.mynewsapp.fragment.DateFragment"
	tools:layout_editor_absoluteY="81dp">


	<TextView
		android:id="@+id/txvSpecific"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="16dp"
		android:text="@string/specific_msg"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:textSize="16sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<View
		android:id="@+id/view2"
		android:layout_width="0dp"
		android:layout_height="2dp"
		android:layout_marginTop="8dp"
		android:background="@color/dividerColor"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/txvSpecific" />


	<Button
		android:id="@+id/btnFromDate"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginTop="24dp"
		android:background="@drawable/btn_from_date_background"
		android:text="@string/btn_from_text"
		android:textColor="@color/white_color"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/view2" />

	<TextView
		android:id="@+id/txvFromDate"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="24dp"
		android:layout_marginTop="32dp"
		android:hint="@string/hint_from_date"
		android:textSize="16sp"
		app:layout_constraintStart_toEndOf="@+id/btnFromDate"
		app:layout_constraintTop_toBottomOf="@+id/view2" />

	<Button
		android:id="@+id/btnToDate"
		android:layout_width="0dp"
		android:layout_height="51dp"
		android:layout_marginLeft="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="24dp"
		android:background="@drawable/btn_from_date_background"
		android:paddingEnd="29dp"
		android:paddingStart="24dp"
		android:text="@string/btn_to_date_text"
		android:textColor="@color/white_color"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/btnFromDate" />

	<TextView
		android:id="@+id/txvToDate"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:hint="@string/hint_to_date"
		android:textSize="16sp"
		app:layout_constraintBaseline_toBaselineOf="@+id/btnToDate"
		app:layout_constraintStart_toStartOf="@+id/txvFromDate" />
</android.support.constraint.ConstraintLayout>
