<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical|fill_vertical"
    android:orientation="vertical"
    tools:layout_editor_absoluteY="25dp">


    <ImageView
        android:id="@+id/articleImag"
        android:layout_width="0dp"
        android:layout_height="198dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="w,16:9"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/jeddah_park_png" />

    <TextView
        android:id="@+id/txvTitle"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif"
        android:text="@string/articleTitle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/articleImag"
        tools:text="Article Title " />

    <TextView
        android:id="@+id/txvSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif-smallcaps"
        android:inputType="textMultiLine"
        android:paddingEnd="15dp"
        android:text="@string/article_summary"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvTitle"
        tools:text="Article Summary Here " />

    <View
        android:id="@+id/dividerView"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/txvDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvSummary" />

    <TextView
        android:id="@+id/txvSection"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/article_section"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dividerView"
        tools:text="Sport" />

    <TextView
        android:id="@+id/txvDate"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_marginRight="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/article_date"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintBaseline_toBaselineOf="@+id/txvSection"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="1-1-2018:16:15 Am" />

    <TextView
        android:id="@+id/txvAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/article_author"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvSection"
        tools:Text="Author Name" />
</android.support.constraint.ConstraintLayout>